# VigiScan

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  report.py  scanner.py
data/: cve_local.json
docs/: CHANGELOG.md  DASHBOARD.md  DEVELOPMENT.md  INSTALL_LINUX.md  SECURITY.md  USAGE.md
modules/: cve_checker.py  directories.py  headers.py  owasp_classifier.py  tech_detect.py  web_fuzzing.py
modules/wordlists/: __init__.py  common_paths.txt  hidden_paths.txt  subdomains.txt
tests/: test_alerts.py  test_cli.py  test_css_contrast.py  test_cve_checker.py  test_directories.py  test_headers.py  test_i18n.py  test_infra_monitor.py  test_iocs_settings.py  test_new_security_modules.py  test_owasp_classifier.py  test_passive_scan.py  test_report.py  test_scanner.py  test_screenshot.py  test_spider.py  test_tech_detect.py  test_uptime.py  test_virustotal.py  test_web.py  test_web_fuzzing.py
vigiscan/: __init__.py  cli.py
vigiscan/data/: __init__.py  cve_local.json
vigiscan/modules/: __init__.py  alerts.py  api_security.py  cve_checker.py  dependency_scanner.py  directories.py  dns_lookup.py  headers.py  infra_monitor.py  passive_scan.py  pdf_report.py  screenshot.py  secret_scanner.py  spider.py  tech_detect.py  tls_analyzer.py  uptime.py  virustotal.py  waf_detect.py
vigiscan/web/: __init__.py  app.py  auth.py  forms.py  i18n.py  models.py  routes.py
vigiscan/web/static/css/: app.css  pdf.css
vigiscan/web/static/js/: app.js
vigiscan/web/templates/: asset_detail.html  asset_form.html  assets.html  attack_surface.html  audit_logs.html  base.html  dashboard.html  domain_dns.html  infrastructure.html  infrastructure_detail.html  ioc_detail.html  ioc_form.html  iocs.html  login.html  owasp.html  pdf_report.html  reports.html  scan_detail.html  scan_new.html  settings.html  threat_intelligence.html  threat_map.html  uptime.html  uptime_form.html  virustotal.html
