[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigiscan"
version = "0.1.0"
description = "Initial Python package structure for VigiScan."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "VigiScan Contributors" }
]
keywords = ["security", "scanner", "cli"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "Flask>=3.0",
    "Flask-Login>=0.6",
    "Flask-SQLAlchemy>=3.1",
    "Flask-WTF>=1.2",
    "requests>=2.32",
    "rich>=13.7",
    "SQLAlchemy>=2.0",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
screenshot = [
    "playwright>=1.45",
]

[project.scripts]
vigiscan = "cli:main"
vigiscan-web = "vigiscan.web.app:main"

[tool.setuptools]
py-modules = ["cli", "scanner", "report"]

[tool.setuptools.packages.find]
include = ["modules*", "data*", "vigiscan*"]

[tool.setuptools.package-data]
"modules.wordlists" = ["*.txt"]
"data" = ["*.json"]
"vigiscan.web" = ["templates/*.html", "static/css/*.css", "static/js/*.js", "static/img/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
